# trade

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: default.yaml
deploy/: Caddyfile  Dockerfile  Dockerfile.web  docker-compose.yml  entrypoint.sh  requirements.txt  web-requirements.txt
deploy/secrets/: .env.example
docs/: strategy_guide.md
docs/runbooks/: paper-soak.md  weekly-reauth.md
docs/security/: m1-credential-review.md
plan/: design.md  milestones.md
src/trader/: __init__.py
src/trader/app/: __init__.py  cli.py  live_guard.py  web_main.py
src/trader/auth/: __init__.py  authenticator.py  callback_server.py  oauth.py  token_store.py  tokens.py
src/trader/backtest/: __init__.py  engine.py  manifest.py  metrics.py  portfolio.py  report.py  rng.py  runner.py
src/trader/backtest/templates/: report.html.j2
src/trader/broker/: __init__.py  schwab_broker.py  sim.py
src/trader/clock/: __init__.py  real.py  virtual.py
src/trader/config/: __init__.py  loader.py  models.py
src/trader/core/: __init__.py  enums.py  protocols.py  types.py
src/trader/data/: __init__.py  cache.py  historical.py  ingest.py  ports.py  schwab_market_data.py
src/trader/execution/: idempotency.py  reconcile.py
src/trader/observability/: __init__.py  alerting.py  heartbeat.py  logging.py
src/trader/orchestrator/: cycle.py  lock.py
src/trader/research/: __init__.py  param_sweep.py
src/trader/risk/: gate.py  kill_switch.py  pdt.py  rules.py
src/trader/scheduler/: __init__.py  calendar.py  daemon.py  jitter.py  triggers.py
src/trader/schwab/: __init__.py  config.py  constants.py  endpoints.py  errors.py  http.py  models.py  orders.py  rate_limit.py  retry.py
src/trader/sizing/: sizer.py
src/trader/state/: __init__.py  attribution.py  db.py  ledger.py  migrate.py
src/trader/state/migrations/: 001_initial.sql  002_fired_slot_ledger.sql  003_attributed_position.sql  004_heartbeat.sql
src/trader/strategy/: __init__.py  bindings.py  contract.py  indicators.py  params.py  registry.py
src/trader/strategy/strategies/: template.py  threshold.py  zscore_revert.py
src/trader/web/: __init__.py  app.py  auth.py  db.py  repository.py  security.py  settings.py  templating.py  views.py
src/trader/web/routes/: __init__.py  account_routes.py  alerts_routes.py  auth_routes.py  config_routes.py  orders_routes.py  strategy_routes.py  system_routes.py
src/trader/web/static/: .gitkeep  app.css  htmx.min.js
src/trader/web/templates/: .gitkeep  account.html  alerts.html  base.html  config.html  login.html  order_detail.html  orders.html  reauth.html  schedule.html  strategies.html  strategy_detail.html  system.html
src/trader/web/templates/_partials/: account_body.html  alerts_body.html  orders_body.html  refresh_wrapper.html  schedule_body.html  strategies_body.html  strategy_detail_body.html  system_body.html
tests/: conftest.py
tests/backtest/: test_golden_multistrategy.py  test_golden_single.py  test_multi_strategy_interleave.py
tests/backtest/fixtures/: golden_config.yaml
tests/backtest/golden/: report_single.json  report_two_strats.json
tests/fakes/: __init__.py  broker.py  clock.py  market_data.py
tests/fixtures/schwab/: account_numbers.json  account_with_positions.json  order_status_filled.json  order_status_working.json  pricehistory_AAPL_daily.json  quotes_AAPL_MSFT.json
tests/integration/: test_backtest_cli.py  test_backtest_cli_report.py  test_idempotency_fuzz.py  test_m3_multistrategy_parity.py  test_paper_pipeline.py
tests/unit/: test_backtest_metrics.py  test_backtest_report.py  test_fakes_conform.py  test_indicators.py  test_packaging.py  test_param_sweep.py  test_smoke.py  test_strategy_contract.py  test_zscore_revert.py
tests/unit/app/: test_cli.py  test_live_guard.py
tests/unit/auth/: test_authenticator.py  test_callback_server.py  test_oauth.py  test_token_store.py  test_token_store_perms.py  test_tokens.py
tests/unit/backtest/: test_engine.py  test_manifest.py  test_portfolio.py  test_report.py
tests/unit/broker/: test_schwab_broker.py  test_sim_core.py  test_sim_fills.py
tests/unit/clock/: test_clocks.py
tests/unit/config/: test_loader.py  test_models.py
tests/unit/core/: test_enums.py  test_m3_types.py  test_protocols.py  test_types.py
tests/unit/data/: test_cache.py  test_historical.py  test_ingest.py  test_schwab_market_data.py
tests/unit/deploy/: test_compose_config.py  test_compose_exposure.py
tests/unit/execution/: test_idempotency.py  test_reconcile.py
tests/unit/observability/: test_alerting.py  test_heartbeat.py  test_logging.py
tests/unit/orchestrator/: test_cycle.py  test_cycle_risk.py  test_lock.py
tests/unit/risk/: test_gate.py  test_kill_switch.py  test_pdt.py  test_rules.py
tests/unit/scheduler/: test_calendar.py  test_daemon.py  test_jitter.py  test_triggers.py
tests/unit/schwab/: test_config.py  test_endpoints.py  test_errors.py  test_http.py  test_no_secret_leakage.py  test_orders.py  test_rate_limit.py
tests/unit/sizing/: test_sizer.py
tests/unit/state/: test_attribution.py  test_ledger.py  test_migrate.py
tests/unit/strategy/: test_bindings.py  test_strategies.py
tests/unit/web/: test_app_health.py  test_auth_routes.py  test_db_readonly.py  test_no_broker_import.py  test_no_secret_leak.py  test_no_write_endpoints.py  test_orders_alerts_config_views.py  test_repository.py  test_security.py  test_strategy_account_views.py  test_system_views.py  test_templates_render.py  test_web_main.py
