[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trader"
version = "0.0.0"
description = "Automated equity trading program — scheduled, multi-strategy, backtestable, Schwab API"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Meng Cao" }]
dependencies = [
  "pydantic>=2",  # config validation (M0.4); more runtime deps added per milestone
  "pyyaml>=6",  # YAML config parsing (M0.5)
  "structlog>=24",  # structured logging + secret scrubbing (M0.6)
  "typer>=0.12",  # CLI (M0.9)
  "httpx>=0.27",  # first-party Schwab HTTP client (M1.4)
  "cryptography>=42",  # self-signed cert for the OAuth loopback callback (M1.5)
  "tenacity>=8",  # retry/backoff for the Schwab HTTP transport (M1.6)
  "pandas>=2.2",  # backtest historical data cache + frames (M2.2)
  "pyarrow>=16",  # Parquet storage engine for the bar cache (M2.2)
  "numpy>=2",  # seeded backtest RNG (M2.9)
  "exchange_calendars>=4.5",  # XNYS trading calendar (M3.3)
  "apscheduler>=3.10,<4",  # live scheduler daemon (M3.11)
  "jinja2>=3.1",  # backtest HTML report templating (M6.6) + web UI (M7)
  "fastapi>=0.115",  # read-only monitoring web UI (M7.2)
  "uvicorn[standard]>=0.30",  # ASGI server for the web UI (M7)
  "argon2-cffi>=23",  # argon2id admin password hashing/verify for the web UI (M7.3)
  "itsdangerous>=2.1",  # signed stateless session + CSRF tokens for the web UI (M7.3)
  "python-multipart>=0.0.9",  # FastAPI form parsing for the web login (M7.4)
]

[project.optional-dependencies]
# Dev/tooling only in M0.1. Runtime deps are added per milestone (M1+).
# Exact versions are pinned in requirements-dev.txt (the lockfile substitute).
dev = [
  "ruff>=0.15.20",
  "mypy>=2.1.0",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "pre-commit>=4.6.0",
  "types-PyYAML>=6",  # mypy stubs for pyyaml
  "respx>=0.21",  # httpx mocking for Schwab contract tests (M1.4)
]

[project.scripts]
# Placeholder entry point in M0.1; the full Typer app is built in M0.9.
trader = "trader.app.cli:app"
# Read-only monitoring web UI server (M7.11); runs in its own container behind Caddy.
trader-web = "trader.app.web_main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trader"]
artifacts = ["src/trader/backtest/templates/*.j2"]  # ship the HTML report template (M6.6)

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
# 3.12 to parse numpy's PEP 695 stubs; ruff (target-version py311) still enforces
# 3.11 source compatibility, matching requires-python.
python_version = "3.12"
strict = true
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true

# Third-party libs without (complete) type stubs — treat as untyped at the boundary
# so our own code stays strictly typed without fighting incomplete upstream stubs.
# (pyarrow/duckdb are added here when a module imports them directly.)
[[tool.mypy.overrides]]
module = ["pandas", "exchange_calendars", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["tests"]  # makes the shared `fakes` test-double package importable (M0.8)
addopts = "-ra -q --strict-markers --import-mode=importlib -m 'not network'"
markers = [
  "unit: fast isolated unit test (CI default)",
  "integration: cross-component test using fakes",
  "network: opt-in test that hits the network (excluded from CI)",
]

[tool.coverage.run]
source = ["src/trader"]
branch = true

[tool.coverage.report]
show_missing = true
